<resources>
    <string name="app_name">FHF</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="no_internet_connection">No internet connection</string>

    <string name="sign_with">SIGN IN WITH</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="dont_have_act">Don\'t have an Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="cnf_pwd">Confirm Password</string>
    <string name="agree_terms">By signing up, I agree to the Terms &amp; Conditions</string>
    <string name="reset_pwd">Enter your mail ID and we will send you a link to reset your password</string>
    <string name="send">SEND</string>
    <string name="your_name">Your Name...</string>
    <string name="your_email">Your Email...</string>
    <string name="your_msg">Write down your message...</string>
    <string name="dob">Date Of Birth</string>
    <string name="submit">SUBMIT</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Pasword</string>
    <string name="about_app"><b>Welcome to Friends Helping Friends Organization </b>\n\n
<p align="left">At FHF, love, care and ultimate support to the needy and the deprived is what we firmly focus upon. For children who work as slaves in houses or who beg on road side to live their daily lives, we approach them and provide them all the essentials comprising of food, clothing, shelter and education and mould them as better citizens in the society. We also offer them with self-employment facilities which are provided to them free of cost. We always ensure to serve them with clean and hygienic food since we pay an ultimate concern towards their health and well-being.</p>
    \n\n For more info click on below link \n\n <a href="www.friendshelpingfriends.in">www.friendshelpingfriends.in</a> \n
    </string>

    <string name="facebook_app_id">415313148637614</string><!-- TO-DO replace facebook APP-ID-->
</resources>
