<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_action_bar_splitter"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_corner"
        android:drawablePadding="5dp"
        android:ellipsize="end"
        android:hint="@string/your_name"
        android:maxLines="1"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_corner"
        android:drawablePadding="5dp"
        android:ellipsize="end"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_corner"
        android:drawablePadding="5dp"
        android:ellipsize="end"
        android:gravity="top"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLines="1"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edt_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_corner"
        android:hint="@string/dob"
        android:padding="5dp" />

    <TextView
        android:id="@+id/tv_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>